# plover_cards

./: .pylintrc  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
plover_cards/: anki_utils.py  card_builder.py  card_builder.ui  card_builder_ui.py  card_suggestions.py  cards.py  config.py  plover_hook.py  resources_rc.py
plover_cards/card_builder/: card_builder.py  card_builder.ui  card_table_model.py  cards.py  utils.py
plover_cards/commands/: anki_commands.py
plover_cards/plover_hook/: card_suggestions.py  plover_hook.py
plover_cards/resources/: resources.qrc
