[metadata]
name = plover_cards
version = 0.1.1
description = Helps build a CSV of new words and stroke improvements for your Anki deck.
long_description = file: README.md
long_description_content_type = text/markdown
author = Antonia Siu
author_email = hello@antoniasiu.co.uk
license = GNU General Public License v3 (GPLv3)
url = https://github.com/antistic/plover_cards
project_urls =
  Issues = https://github.com/antistic/plover_cards/issues
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords = plover plover_plugin anki

[options]
zip_safe = True
python_requires = >=3.7
install_requires =
  plover>=4.0.0.dev3
packages =
  plover_cards

[options.entry_points]
plover.gui.qt.tool =
  plover_cards = plover_cards.card_builder:CardBuilder
plover.extension =
  plover_cards_hook = plover_cards.plover_hook:Main
